--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "shopify",
-  "version": "1.0.0",
-  "description": "",
+  "name": "shopify-ai-architect",
+  "version": "4.0.0",
+  "description": "Shopify-Auto-Omni V4.0 Architecture",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@shopify/shopify-api": "^11.6.0",
     "axios": "^1.13.2",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "fs-extra": "^11.3.3",
-    "open": "^11.0.0"
+    "open": "^11.0.0",
+    "puppeteer": "^24.1.0"
   }
 }
